[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player/naturalistpig.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/Idle.tres" type="Animation" id=3]
[ext_resource path="res://Player/Walk.tres" type="Animation" id=4]
[ext_resource path="res://CatchingArea/Circles.png" type="Texture" id=5]
[ext_resource path="res://Player/tools.png" type="Texture" id=6]

[sub_resource type="Animation" id=4]
resource_name = "Catch"
tracks/0/type = "value"
tracks/0/path = NodePath("20210614211222Swineciety:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("20210614211222Swineciety:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 66.6108

[sub_resource type="CircleShape2D" id=3]
radius = 23.0868

[node name="Player" type="KinematicBody2D"]
position = Vector2( 1, 0 )
collision_mask = 9
script = ExtResource( 2 )

[node name="20210614211222Swineciety" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Catch = SubResource( 4 )
anims/Idle = ExtResource( 3 )
anims/RESET = SubResource( 5 )
anims/Walk = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 10 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="ProximityArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProximityArea"]
shape = SubResource( 2 )

[node name="NetArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="Circles" type="Sprite" parent="NetArea"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -5.96046e-08, 0 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 5 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="NetArea"]
shape = SubResource( 3 )

[node name="FishingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="Circles" type="Sprite" parent="FishingArea"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -5.96046e-08, 0 )
scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 5 )
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="FishingArea"]
shape = SubResource( 3 )

[node name="Tools" type="Sprite" parent="."]
position = Vector2( 10, 2 )
texture = ExtResource( 6 )
hframes = 3
frame = 2

[connection signal="body_entered" from="FishingArea" to="." method="_on_FishingArea_body_entered"]
[connection signal="body_exited" from="FishingArea" to="." method="_on_FishingArea_body_exited"]
